...
            "state" : "translated",
            "value" : "添加数据源以连接到 InfluxDB、Prometheus、MQTT，或使用内置演示数据。"
          }
        }
      }
    },
    "Add Data Source" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Datenquelle hinzufügen"
          }
...
            "state" : "translated",
            "value" : "自动"
          }
        }
      }
    },
    "Back" : {
      "extractionState" : "stale",
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zurück"
...
            "state" : "translated",
            "value" : "日历"
          }
        }
      }
    },
    "Cancel" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Abbrechen"
          }
...
            "state" : "translated",
            "value" : "炭灰"
          }
        }
      }
    },
    "Chart Explorer" : {

    },
    "Chart Group" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
...
            "state" : "translated",
            "value" : "客户端 PKCS#12"
          }
        }
      }
    },
    "Close" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Schließen"
          }
...
            "state" : "translated",
            "value" : "仪表板名称"
          }
        }
      }
    },
    "Dashboards" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Dashboards"
          }
...
            "state" : "translated",
            "value" : "示例"
          }
        }
      }
    },
    "Explore" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Erkunden"
          }
...
            "state" : "translated",
            "value" : "兆瓦时"
          }
        }
      }
    },
    "Menu" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Menue"
          }
...
